tests/baselines/reference/expandoFunctionContextualTypesNoValue.errors.txt
tests/cases/compiler/expandoFunctionContextualTypesNoValue.ts(2,17): error TS2307: Cannot find module 'blah' or its corresponding type declarations.


==== tests/cases/compiler/expandoFunctionContextualTypesNoValue.ts (1 errors) ====
    // GH #38532
    import Foo from "blah";
                    ~~~~~~
!!! error TS2307: Cannot find module 'blah' or its corresponding type declarations.
    
    export function Foo() { }
    
    Foo.bar = () => { };
    